# FeltElements

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  conanfile.txt
cmake/: CompilerWarnings.cmake  FindLuaDist.cmake
resources/: CONVERTING.md
resources/bunny/: README.md  bunny_vol.ovm
resources/double/: tet.1.edge  tet.1.ele  tet.1.face
resources/single/: tet.1.edge  tet.1.face
resources/test/: one.ovm  two.ovm
resources/two/: tet.1.face
src/app/: CMakeLists.txt  main.cpp  main.moon  tap_adaptor.hpp  vec_semantic.hpp
src/lib/: CMakeLists.txt
src/lib/FeltElements/: Attributes.cpp  Attributes.hpp  Body.hpp  Derivatives.cpp  Derivatives.hpp  Element.cpp  Element.hpp  Format.hpp  Material.hpp  MeshDecorator.cpp  MeshDecorator.hpp  MeshFacade.cpp  MeshFacade.hpp  MeshFile.cpp  MeshFile.hpp  MeshIO.cpp  MeshIO.hpp  Solver.cpp  Solver.hpp  TetGenIO.cpp  TetGenIO.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Typedefs.hpp
src/lib/FeltElements/internal/: Attribute.hpp  Attributes.hpp  Conversions.hpp  Format.hpp
src/test/: CMakeLists.txt  Solver.cpp  TetGenIO.cpp  common.hpp  main.cpp  util.hpp
src/test/resources/: tet.poly
src/test/resources/double/: tet.1.node
src/test/resources/tetgen/one/: tet.1.ele  tet.1.node
src/test/resources/two/: tet.1.edge  tet.1.ele  tet.1.node
src/test/util/: Assert.hpp  Format.hpp  IO.cpp  IO.hpp
